wip: improve observability